# NetworkService

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Config_8h.html  Config_8h__incl.map  Config_8h__incl.md5  Config_8h_source.html  Errno_8h.html  Errno_8h__incl.map  Errno_8h__incl.md5  Errno_8h_source.html  Executor_8h.html  Executor_8h__incl.map  Executor_8h__incl.md5  Executor_8h_source.html  IConfigData_8h.html  IConfigData_8h__dep__incl.map  IConfigData_8h__dep__incl.md5  IConfigData_8h__incl.map  IConfigData_8h__incl.md5  IConfigData_8h_source.html  IConfig_8h.html  IConfig_8h__dep__incl.map  IConfig_8h__dep__incl.md5  IConfig_8h__incl.map  IConfig_8h__incl.md5  IConfig_8h_source.html  IExecutor_8h.html  IExecutor_8h__dep__incl.map  IExecutor_8h__dep__incl.md5  IExecutor_8h_source.html  ILogger_8h.html  ILogger_8h__dep__incl.map  ILogger_8h__dep__incl.md5  ILogger_8h__incl.map  ILogger_8h__incl.md5  ILogger_8h_source.html  INetwork_8h.html  (+356 more)
ci/: .vimrc  Dockerfile
cmake/: code-quality.cmake  compilation-options.cmake
cmake/frameworks/: googletest.cmake
cmake/git/: pre-commit-hook.cmake  pre-commit-hook.in
cmake/tools/: clang-format.cmake  clang-tidy.cmake  code-coverage.cmake  dependency-graph.cmake  macros.cmake
doc/: CMakeLists.txt  Doxyfile.in
res/: example.json  example.txt
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  (+29 more)
src/: CMakeLists.txt  Main.cpp
src/plugins/: CMakeLists.txt
src/plugins/config/: CMakeLists.txt  Config.cpp  Config.h  FakeConfig.cpp  IReader.h  JsonConfig.cpp  MockConfig.cpp
src/plugins/config/json/: CMakeLists.txt  JsonReader.cpp  JsonReader.h
src/plugins/config/mock/: CMakeLists.txt  MockReader.cpp  MockReader.h
src/plugins/firewall/: CMakeLists.txt  Rule.cpp  Rule.h  RuleFactory.cpp  RuleFactory.h
src/plugins/logger/: CMakeLists.txt  Logger.h  StdLogger.cpp
src/plugins/network/: CMakeLists.txt  Network.cpp  Network.h  Wrapper.cpp  Wrapper.h
src/plugins/network/interface/: Interface.cpp  Interface.h  Setup.cpp  Setup.h
src/plugins/network/layer/: Layer.cpp  Layer.h  Setup.cpp  Setup.h
src/service/: CMakeLists.txt  NetworkService.cpp  NetworkService.h
src/service/plugins/: CMakeLists.txt  IConfig.h  IConfigData.h  ILogger.h  INetwork.h  IRule.h  IRuleFactory.h
src/utils/: CMakeLists.txt
src/utils/command/: CMakeLists.txt  Executor.cpp  Executor.h  Parser.cpp  Parser.h
src/utils/command/executor/: Executor.cpp  Executor.h  IExecutor.h  IOsal.h
src/utils/command/executor/osal/: CMakeLists.txt  Linux.cpp  Linux.h  Wrapper.cpp  Wrapper.h
src/utils/command/parser/: Parser.cpp  Parser.h
src/utils/file/: CMakeLists.txt  Writer.cpp  Writer.h
src/utils/file/reader/: CMakeLists.txt  IReader.h  Reader.cpp  Reader.h
src/utils/file/writer/: CMakeLists.txt  IWriter.h  Writer.cpp  Writer.h
src/utils/helper/: CMakeLists.txt  Errno.cpp  Errno.h
test/: CMakeLists.txt
test/mocks/: MockConfig.cpp  MockConfig.h  MockExecutor.cpp  MockExecutor.h  MockLogger.cpp  MockLogger.h  MockNetwork.cpp  MockNetwork.h  MockOsal.cpp  MockOsal.h  MockReader.cpp  MockReader.h  MockRule.cpp  MockRule.h  MockRuleFactory.cpp  MockRuleFactory.h  MockWriter.cpp  MockWriter.h
test/plugins/: CMakeLists.txt
test/plugins/config/: CMakeLists.txt  FakeConfigTest.cpp  JsonConfigTest.cpp
test/plugins/firewall/: CMakeLists.txt  RuleFactoryTest.cpp  RuleTest.cpp
test/plugins/logger/: CMakeLists.txt  StdLoggerTest.cpp
test/plugins/network/: CMakeLists.txt  InterfaceTest.cpp  LayerTest.cpp  NetworkTest.cpp
test/plugins/network/fakes/: MockOS.cpp  MockOS.h  MockWrapper.cpp  MockWrapper.h  OS.cpp  Wrapper.cpp  ifaddrs.cpp  ifaddrs.h
test/service/: CMakeLists.txt  NetworkServiceTest.cpp
test/utils/: CMakeLists.txt
test/utils/command/: CMakeLists.txt  ExecutorTest.cpp  ParserTest.cpp
test/utils/command/osal/: CMakeLists.txt  LinuxTest.cpp
test/utils/command/osal/fakes/: MockOS.cpp  MockOS.h  MockWrapper.cpp  MockWrapper.h  OS.cpp  Wrapper.cpp
test/utils/file/: CMakeLists.txt  ReaderTest.cpp  WriterTest.cpp
test/utils/helper/: CMakeLists.txt  ErrnoTest.cpp
