##
#
# \file CMakeLists.txt
#
# \author Boubacar DIENE <boubacar.diene@gmail.com>
# \date   April 2020
#
# \brief  CMakeLists.txt to build command, file and helper classes
#
##

#################################################################
#                       Subdirectories                          #
#################################################################

add_subdirectory(command)
add_subdirectory(file)
add_subdirectory(helper)
