##
#
# \file CMakeLists.txt
#
# \author Boubacar DIENE <boubacar.diene@gmail.com>
# \date   May 2020
#
# \brief  CMakeLists.txt to build tests under plugins directory
#
##

#################################################################
#                       Subdirectories                          #
#################################################################

add_subdirectory(network)
