##
#
# \file CMakeLists.txt
#
# \author Boubacar DIENE <boubacar.diene@gmail.com>
# \date   May 2020
#
# \brief  CMakeLists.txt to build tests under utils directory
#
##

#################################################################
#                       Subdirectories                          #
#################################################################

add_subdirectory(helper)
